--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ h1{margin:6px 0 2px;color:var(--accent)}
 
 <div class="header">
   <button class="theme-toggle" id="themeBtn">🌙</button>
-  <img src="bro.jpg" class="mascot">
+  <img src="bro" class="mascot">
   <h1>Keepy</h1>
   <p class="motto">Keep Going</p>
   <div id="countdown">--:--:--</div>
@@ -1300,3 +1300,4 @@ render();
 </script>
 </body>
 </html>
+
