--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ body{
   -moz-user-select:none;
   -ms-user-select:none;
   user-select:none;
+  touch-action:pan-y pinch-zoom;
 }
 
 input, textarea, [contenteditable]{
@@ -68,6 +69,10 @@ input, textarea, [contenteditable]{
   -moz-user-select:text;
   -ms-user-select:text;
   user-select:text;
+}
+
+.drag-handle{
+  touch-action:none;
 }
 
 .header{text-align:center;margin-bottom:10px;position:relative}
@@ -212,32 +217,48 @@ h1{margin:6px 0 2px;color:var(--accent)}
 
 .menu{
   position:absolute;right:12px;top:52px;
-  background:var(--bg-primary);border-radius:12px;
+  background:rgba(30,41,59,0.7);
+  backdrop-filter:blur(20px) saturate(180%);
+  -webkit-backdrop-filter:blur(20px) saturate(180%);
+  border-radius:16px;
   overflow:hidden;display:none;
-  box-shadow:0 8px 24px rgba(0,0,0,.6);z-index:100;
-  border:1px solid var(--bg-tertiary);
-  min-width:200px;
+  box-shadow:0 10px 40px rgba(0,0,0,.5), 0 0 0 0.5px rgba(255,255,255,0.1) inset;
+  z-index:100;
+  border:1px solid rgba(255,255,255,0.1);
+  min-width:220px;
+}
+[data-theme="light"] .menu{
+  background:rgba(248,250,252,0.8);
+  border:1px solid rgba(0,0,0,0.1);
 }
 .menu button{
-  width:100%;padding:12px 16px;
+  width:100%;padding:14px 16px;
   background:none;border:none;color:var(--text-primary);
   text-align:left;cursor:pointer;
-  font-size:14px;
-  min-height:44px;
+  font-size:15px;
+  min-height:48px;
   transition:background .2s;
-  display:flex;align-items:center;gap:10px;
-  border-bottom:1px solid var(--bg-tertiary);
+  display:flex;align-items:center;gap:12px;
+  border-bottom:0.5px solid rgba(255,255,255,0.08);
+}
+[data-theme="light"] .menu button{
+  border-bottom:0.5px solid rgba(0,0,0,0.06);
 }
 .menu button:last-child{
   border-bottom:none;
 }
-.menu button:hover{background:var(--bg-secondary)}
-.menu button:active{background:var(--bg-tertiary)}
-.menu button.danger{
-  color:var(--danger);
+.menu button:active{
+  background:rgba(255,255,255,0.1);
+  transform:scale(0.98);
 }
-.menu button.danger:hover{
-  background:rgba(239,68,68,0.1);
+[data-theme="light"] .menu button:active{
+  background:rgba(0,0,0,0.05);
+}
+.menu button.danger{
+  color:#ff453a;
+}
+.menu button.danger:active{
+  background:rgba(255,69,58,0.15);
 }
 
 .toggle-cal{
@@ -374,7 +395,6 @@ h1{margin:6px 0 2px;color:var(--accent)}
 .quote-text{
   font-style:italic;color:var(--text-primary);
   font-size:15px;line-height:1.5;
-  padding-right:40px;
 }
 .quote-refresh{
   position:absolute;right:12px;top:12px;
@@ -466,11 +486,11 @@ h1{margin:6px 0 2px;color:var(--accent)}
 </div>
 
 <div class="quote-box" id="quoteBox">
-  <div class="quote-text" id="quoteText"></div>
-  <div style="position:absolute;right:12px;top:12px;display:flex;gap:6px">
-    <button class="lang-flag" data-lang="pl" style="background:none;border:none;font-size:20px;cursor:pointer;opacity:0.5;transition:opacity .2s,transform .2s">🇵🇱</button>
-    <button class="lang-flag" data-lang="en" style="background:none;border:none;font-size:20px;cursor:pointer;opacity:0.5;transition:opacity .2s,transform .2s">🇬🇧</button>
-    <button class="lang-flag" data-lang="es" style="background:none;border:none;font-size:20px;cursor:pointer;opacity:0.5;transition:opacity .2s,transform .2s">🇪🇸</button>
+  <div class="quote-text" id="quoteText" style="margin-bottom:12px"></div>
+  <div style="display:flex;gap:8px;justify-content:center">
+    <button class="lang-flag" data-lang="pl" style="background:var(--bg-tertiary);border:none;font-size:18px;cursor:pointer;opacity:0.5;transition:opacity .2s,transform .2s;padding:8px 12px;border-radius:8px;min-width:44px">🇵🇱</button>
+    <button class="lang-flag" data-lang="en" style="background:var(--bg-tertiary);border:none;font-size:18px;cursor:pointer;opacity:0.5;transition:opacity .2s,transform .2s;padding:8px 12px;border-radius:8px;min-width:44px">🇬🇧</button>
+    <button class="lang-flag" data-lang="es" style="background:var(--bg-tertiary);border:none;font-size:18px;cursor:pointer;opacity:0.5;transition:opacity .2s,transform .2s;padding:8px 12px;border-radius:8px;min-width:44px">🇪🇸</button>
   </div>
 </div>
 
@@ -842,8 +862,24 @@ function renderCalendar(h){
   nav.append(l,title,r);
   cal.append(nav);
 
-  l.onclick=(e)=>{e.stopPropagation(); h.monthOffset--; save(); render();}
-  r.onclick=(e)=>{e.stopPropagation(); h.monthOffset++; save(); render();}
+  l.onclick=(e)=>{
+    e.stopPropagation();
+    h.monthOffset--;
+    save();
+    // Re-render only calendar, not entire habit
+    const newCalendar=renderCalendar(h);
+    cont.innerHTML='';
+    cont.append(newCalendar.cal);
+  }
+  r.onclick=(e)=>{
+    e.stopPropagation();
+    h.monthOffset++;
+    save();
+    // Re-render only calendar, not entire habit
+    const newCalendar=renderCalendar(h);
+    cont.innerHTML='';
+    cont.append(newCalendar.cal);
+  }
 
   const daysContainer=document.createElement("div");
   daysContainer.className="calendar-days";
@@ -869,11 +905,16 @@ function renderCalendar(h){
 
     div.onclick=()=>{
       if(!h.editing || !editable) return;
-      if(h.datesDone.includes(ds))
+      if(h.datesDone.includes(ds)){
         h.datesDone=h.datesDone.filter(x=>x!==ds);
-      else
+        div.classList.remove('done');
+      }else{
         h.datesDone.push(ds);
-      save(); render();
+        div.classList.add('done');
+      }
+      save();
+      // Update stats without re-rendering entire page
+      updateStats();
     };
 
     daysContainer.append(div);
@@ -1003,7 +1044,19 @@ function render(){
 
     const {cont,cal}=renderCalendar(h);
 
-    toggle.onclick=()=>{h.calendarOpen=!h.calendarOpen; save(); render();};
+    toggle.onclick=()=>{
+      h.calendarOpen=!h.calendarOpen;
+      save();
+      // Update calendar without full re-render
+      const calendarDiv=div.querySelector('.calendar');
+      if(h.calendarOpen){
+        calendarDiv.classList.add('show');
+        toggle.textContent="📅 Ukryj kalendarz";
+      }else{
+        calendarDiv.classList.remove('show');
+        toggle.textContent="📅 Pokaż kalendarz";
+      }
+    };
 
     div.querySelector(".editHist").onclick=()=>{
       h.editing=!h.editing;
