--- a/index.html
+++ b/index.html
@@ -508,14 +508,15 @@ h1{margin:6px 0 2px;color:var(--accent)}
 }
 
 .calendar-days{
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 2px;
 }
 
 .calendar-weekdays{
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  gap: 3px;
+  gap: 2px;
   margin-bottom: 8px;
 }
 
